[package]
name = "heron_core"
version = "0.5.1"
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "Core components and resources to use Heron"
repository = "https://github.com/jcornaz/heron/"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7d0e98f34c43eb62522c0c65de64f7b458b899be", default-features = false }
duplicate = "^0.2.9"

[dev-dependencies]
rstest = "0.7"
