[package]
name = "heron_debug"
version = "0.5.1"
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "Rendering of Heron's collision shapes for debugging purposes"
repository = "https://github.com/jcornaz/heron/"

[features]
default = []
2d = ["bevy_prototype_lyon"]
3d = []

[dependencies]
heron_core = { path = "../core", version = "^0.5.0"}
heron_rapier = { path = "../rapier", version = "^0.5.0"}
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7d0e98f34c43eb62522c0c65de64f7b458b899be", features = ["render"] }
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", rev = "8fe27be2e75b0829efcc97080912f16f8b3aedd1", optional = true }
fnv = "^1.0"
